--- a/index.html
+++ b/index.html
@@ -116,6 +116,45 @@
             <div id="content">
 
             </div>
+
+
+
+            <!-- Icons -->
+            <div id="icons">
+
+                <a href="https://www.instagram.com/jorgeloopzz/" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                    <!-- <span>
+                        Hola
+                    </span> -->
+                </a>
+
+                <a href="https://twitter.com/jorgeloopzz" target="_blank">
+                    <i class="fab fa-twitter"></i>
+                    <!-- <span>
+                        Hola
+                    </span> -->
+                </a>
+
+                <a href="https://www.youtube.com/channel/UCZ41zUhamIJ6ooKJatyzxeA" target="_blank">
+                    <i class="fab fa-youtube"></i>
+                    <!-- <span>
+                        Hola
+                    </span> -->
+                </a>
+
+                <a href="https://github.com/Jorgedeveloopzz" target="_blank">
+                    <i class="fab fa-github"></i>
+                    <!-- <span>
+                        Hola
+                    </span> -->
+                </a>
+
+                <!-- CHange Theme button -->
+                <button id="changeThemeButton">
+                    <i class="fas fa-adjust"></i>
+                </button>
+            </div>
         </main>
 
     </body>
