--- a/index.html
+++ b/index.html
@@ -122,34 +122,43 @@
             <!-- Icons -->
             <div id="icons">
 
-                <a href="https://www.instagram.com/jorgeloopzz/" target="_blank">
-                    <i class="fab fa-instagram"></i>
-                    <!-- <span>
-                        Hola
-                    </span> -->
-                </a>
+                <div class="tooltip">
+                    <a href="https://www.instagram.com/jorgeloopzz/" target="_blank">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <span id="insta">
+                        Instagram
+                    </span>
+                </div>
 
-                <a href="https://twitter.com/jorgeloopzz" target="_blank">
-                    <i class="fab fa-twitter"></i>
-                    <!-- <span>
-                        Hola
-                    </span> -->
-                </a>
+                <div class="tooltip">
+                    <a href="https://twitter.com/jorgeloopzz" target="_blank">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <span>
+                        Twitter
+                    </span>
+                </div>
 
-                <a href="https://www.youtube.com/channel/UCZ41zUhamIJ6ooKJatyzxeA" target="_blank">
-                    <i class="fab fa-youtube"></i>
-                    <!-- <span>
-                        Hola
-                    </span> -->
-                </a>
+                <div class="tooltip">
+                    <a href="https://www.youtube.com/channel/UCZ41zUhamIJ6ooKJatyzxeA" target="_blank">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                    <span>
+                        Youtube
+                    </span>
+                </div>
 
-                <a href="https://github.com/Jorgedeveloopzz" target="_blank">
-                    <i class="fab fa-github"></i>
-                    <!-- <span>
-                        Hola
-                    </span> -->
-                </a>
-
+                <diV class="tooltip">
+                    <a href="https://github.com/Jorgedeveloopzz" target="_blank">
+                        <i class="fab fa-github"></i>
+                    </a> 
+                    <span>
+                        Github
+                    </span>
+                </diV>
+                
+                
                 <!-- CHange Theme button -->
                 <button id="changeThemeButton">
                     <i class="fas fa-adjust"></i>
