--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     
                     <div class="dropdown">
     
-                        <button class="header-button" id="gamesButton" onclick="myFunction()">
+                        <button class="header-button" id="gamesButton">
 
                             <strong class="stats">
                                 Estadísticas
