--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/cd7a3a8748.js" crossorigin="anonymous"></script>
     <!-- JS code -->
     <script src="js/theme.js"></script>
-    <script src="js/dropMenu.js"></script>
+    <script src="js/dropButton.js"></script>
 </head>
  
     <body>
