--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <main>
 
             <!-- Header -->
-            <!-- Border of the header -->
-            <div id="header">
+            
+            <div id="header"> <!-- Border of the header -->
+                
                 <header id="insideHeader">
 
                     <button id="aboutMe" class="header-button">
