Removed the links of the fonts

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" type = "text/css" href = "style/style.css">    
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
-    <title>Mi primera página</title>
+    <!-- CSS code -->
+    <link rel = "stylesheet" type = "text/css" href = "style/style.css" href="style/responsive.css"> 
+    <!-- Icons -->
     <script src="https://kit.fontawesome.com/cd7a3a8748.js" crossorigin="anonymous"></script>
+    <title>Mi primera página</title>
     <!-- JS code -->
     <script src="js/theme.js"></script>
     <script src="js/dropButton.js"></script>
