Added the responsive file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS code -->
-    <link rel = "stylesheet" type = "text/css" href = "style/style.css" href="style/responsive.css"> 
+    <link rel = "stylesheet" href = "style/style.css"> 
+    <link rel = "stylesheet" href = "style/responsive.css" />
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/cd7a3a8748.js" crossorigin="anonymous"></script>
     <title>Mi primera página</title>
