Added the images in about me content

--- a/index.html
+++ b/index.html
@@ -123,7 +123,10 @@
 
                 <div class="content">
 
-                    <div></div>
+                    <div class="images">
+                        <img src="style/imagenes,clips/leftPicture.jpg" width="300px">
+                        <img src="style/imagenes,clips/bottom-left-picture.jpg" width="300px">
+                    </div>
                     
                     <p>
                         Hola, soy un chaval de 18 años que empezó su aventura en la programación hace ya cosa de un año (Noviembre de 2020). <br>
@@ -138,7 +141,10 @@
                         y esta hecha con HTML, CSS y JS, así que para acabar espero que os guste. <3
                     </p>
 
-                    <div></div>
+                    <div class="images">
+                        <img src="style/imagenes,clips/rightPicture.jpg" width="300px">
+                        <img src="style/imagenes,clips/bottom-right-picture.jpg" width="300px">
+                    </div>
 
                 </div>
 
