Added the buttons to change images and the 'color' class to Github and theme icons

--- a/index.html
+++ b/index.html
@@ -149,7 +149,25 @@
                 </div>
 
                 <div class="content">
-                    Matches
+                    <!-- Previous button -->
+                    <button id="prev">
+                        &#10094;
+                    </button>
+
+                    <!-- BO4 matches -->
+                    <!-- <img src = "Matches/BO4/20210721_002453.jpg" class = "Matches" onclick="slideShows(7)">
+                    <img src = "Matches/BO4/20210721_134227.jpg" class = "Matches">
+                    <img src = "Matches/BO4/20210721_165659.jpg" class = "Matches">
+                    <img src = "Matches/BO4/20210728_163203.jpg" class = "Matches"> -->
+
+                    <!-- MW matches -->
+                    <!-- <img src = "Matches/MW/20200606_203635.jpg" class = "Matches"> -->
+                    <!-- <img src = "Matches/MW/20210131_010950.jpg" class = "Matches"> -->
+
+                    <!-- Next button -->
+                    <button id="next">
+                        &#10095;
+                    </button>
                 </div>
 
 
@@ -220,7 +238,7 @@
                 <diV class="tooltip">
 
                     <a href="https://github.com/Jorgedeveloopzz" target="_blank">
-                        <i class="fab fa-github"></i>
+                        <i class="fab fa-github color"></i>
                     </a> 
 
                     <span>
@@ -231,7 +249,7 @@
                 
                 <!-- Change Theme button -->
                 <button id="changeThemeButton">
-                    <i class="fas fa-adjust"></i>
+                    <i class="fas fa-adjust color"></i>
                 </button>
 
             </div>
