Added the month.js script and a text format to put the months

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="js/theme.js"></script>
     <script src="js/dropButton.js"></script>
     <script src="js/slide.js"></script>
+    <script src="js/months.js"></script>
 </head>
  
     <body>
@@ -118,7 +119,7 @@
                     </div>
                     
                     <p>
-                        Hola, soy un chaval de 18 años que empezó su aventura en la programación hace ya cosa de un año (Noviembre de 2020). <br>
+                        Hola, soy un chaval de 18 años que empezó su aventura en la programación hace ya cosa de <b id="months"></b> meses. <br>
                         Por aquel entonces empezé con Python haciendo los programas en el intérprete junto con la documentación para ver que podía aprender. 
                         Aprender aprendí poco, ya que por aquel entonces no me enteraba de nada de lo que hacía, me frustré y deje de programar. <br>
                         En Febrero, estando en el 2º trimestre de 2º de Bachillerato de ciencias, encontré una plataforma (Khan Academy, empezando con HTML y CSS) 
