--- a/index.html
+++ b/index.html
@@ -126,6 +126,15 @@
             <!-- Icons -->
             <div id="icons">
                 <!-- Tooltips  and icons -->
+		<div class="tooltip">
+                    <a href="https://twitter.com/jorgeloopzz" target="_blank">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <span>
+                        Twitter
+                    </span>
+                </div>
+                
                 <diV class="tooltip">
                     <a href="https://github.com/Jorgedeveloopzz" target="_blank">
                         <i class="fab fa-github color"></i>
@@ -134,7 +143,7 @@
                         Github
                     </span>
                 </diV>
-                
+
                 <!-- Change Theme button -->
                 <button id="changeThemeButton">
                     <i class="fas fa-adjust color"></i>
