Fixed github link

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 </div>
                 
                 <diV class="tooltip">
-                    <a href="https://github.com/Jorgedeveloopzz" target="_blank">
+                    <a href="https://github.com/jorgeloopzz" target="_blank">
                         <i class="fab fa-github color"></i>
                     </a> 
                     <span>
